--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -6,6 +6,7 @@
   background: rgba(var(--pry-col), 1);
   box-shadow: rgba(var(--com-col), 0.2) 0px 8px 24px;
   color: rgba(var(--com-col), 1);
+  z-index: 999;
 }
 
 .topbarWrapper {
