se agrego el login

--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -152,13 +152,11 @@ img {
 .boton:hover {
   cursor: pointer;
 }
-.boton--primario {
+.boton {
   background-color: cadetblue;
 }
 
-.boton--secundario {
-  background-color: var(--primario);
-}
+
 
 .cursos {
   list-style: none;
