--- a/client/src/pages/products/products.css
+++ b/client/src/pages/products/products.css
@@ -47,16 +47,23 @@ html {
 
 .resultados{
     background-color: cadetblue;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: space-between;
 }
 
 
 
 .principal{
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
+    margin-top: 30px;
+    margin-right: 30px;
 }
+
+.filtros{
+  margin-left: 20px;
+}
+
 
 .precio, .ubicacion{
     display:grid;
