--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -1,7 +1,7 @@
-.sidebar{
+.Sidebar{
     background-color: rgb(255, 0, 0);
     flex: 1;
-    .top{
+    .topS{
         height: 50px;
         display: flex;
         align-items: center;
