--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -1,15 +1,60 @@
 .Sidebar{
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(255, 255, 255);
     flex: 1;
+    border-right: 0.5px solid #058c9e;
+    min-height: 100vh;
     .topS{
         height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
-        
-        font-size: 20px;
-        font-weight: bold;
-        color: black;
-        
+
+        .sidebarTitle {
+            font-size: 34px;
+            font-weight: 900;
+            text-align: center;
+            cursor: pointer;
+            color: rgba(var(--ter-col), 1);
+          }
+          
+        .sidebarTitle span {
+            font-weight: 500;
+            color: rgba(var(--com-col), 1);
+        }
+    }
+
+    hr{
+        height: 0;
+        border: 0.5px solid #058c9e;
+    }
+
+
+    .centerS{
+        padding-left: 10px;
+        ul{
+            .title{
+                font-size: 10px;
+                font-weight: bold;
+                color:#058c9e;
+                margin-top: 15px;
+                margin-bottom: 5px;
+            }
+            li{
+                display: flex;
+                align-items: center;
+                padding: 4px;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: #058c9e82;
+                  }
+            }
+            .icon{
+                font-size: 18px;
+                color: #058c9e;
+            }
+
+
+        }
     }
 }
