--- a/client/src/pagesS/Supplier/Supplier.scss
+++ b/client/src/pagesS/Supplier/Supplier.scss
@@ -2,7 +2,7 @@
     display: flex;
     .supplierContainer{
         flex: 6;
-        background-color: purple;
+        background-color:#058c9e;
         display: flex;
         flex-direction: column;
         align-items: center;
