--- a/client/src/components/table/Table.scss
+++ b/client/src/components/table/Table.scss
@@ -2,7 +2,7 @@
     .cellWrapper {
       display: flex;
       align-items: center;
-      color: #f1f1f1;
+      color: #5f9ea0;
   
       .image {
         width: 32px;
