--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -143,6 +143,7 @@ img {
   font-weight: 700;
   margin-bottom: 2rem;
   border: none;
+  border-radius: 5px;
 }
 @media (min-width: 768px) {
   .boton {
@@ -153,7 +154,7 @@ img {
   cursor: pointer;
 }
 .boton--primario {
-  background-color: var(--negro);
+  background-color: cadetblue;
 }
 
 .boton--secundario {
@@ -184,9 +185,13 @@ img {
 }
 
 .footer {
-  background-color: var(--negro);
+  background-color: cadetblue;
   padding-bottom: 3rem 0;
   margin-top: 4rem;
+}
+
+.footer a:hover{
+  text-decoration: none;
 }
 
 /* Sobre NOSOTROS*/
