--- a/client/src/pages/product/product.css
+++ b/client/src/pages/product/product.css
@@ -47,6 +47,14 @@
     max-width: 15%;
   }
 
+  .linea {
+    border-top: 1px solid black;
+    height: 2px;
+    width: 100%;
+    padding: 0;
+    margin: 20px 0 0 auto;
+  }
+
 .resultados{
     background-color: cadetblue;
     display: grid;
@@ -56,19 +64,47 @@
 
 
 .Productoprincipal{
+  margin-left: 2rem;
   margin-top: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 90%;
+  width: 95%;
   padding: 2rem;
-  box-shadow: 7px 13px 30px #000;
+  box-shadow: 7px 13px 30px rgb(117, 117, 117);
 
 }
 
 .ProductoInformacion{
   margin-left: 3rem;
-  box-shadow: 7px 13px 30px #000;
+  box-shadow: 7px 13px 30px rgb(117, 117, 117);
   border-radius: 10px;
   padding: 1rem;
 }
 
+.ProductoComentarios{
+  margin-left: 2rem;
+  margin-top: 3rem;
+  padding: 2rem;
+  width: 95%;
+  box-shadow: 7px 13px 30px rgb(117, 117, 117);
+}
+
+.BotonComentario{
+
+}
+
+.ProductoSecundario{
+  display: flex;
+  padding: 2rem;
+  margin-left: 2rem;
+  margin-top: 3rem;
+  width: 95%;
+  box-shadow: 7px 13px 30px rgb(117, 117, 117);
+}
+
+.ProductoSecundario img{
+  width: 300px;
+  height: 250px;
+  margin-right: 2rem;
+  padding: 2rem;
+}
