--- a/client/src/pages/products/products.css
+++ b/client/src/pages/products/products.css
@@ -47,13 +47,9 @@ html {
 
 .resultados{
     background-color: cadetblue;
-<<<<<<< HEAD
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-=======
     display: flex;
     justify-content: space-between;
->>>>>>> 213718eebfa8db57e2965c7ee43fb27b05d29af8
+
 }
 
 
@@ -65,7 +61,7 @@ html {
 }
 
 =======
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 2fr;
     margin-top: 30px;
     margin-right: 30px;
 }
@@ -81,12 +77,13 @@ html {
     grid-template-rows: 1fr;
 }
 
-.precio a, .ubicacion a{
+.precio a, .ubicacion a{ 
     color: gray;
 }
 
 .productos{
     box-shadow: 7px 13px 30px #000;
+    width: 98%;
 }
 
 .linea {
