--- a/client/src/pagesS/Sproducts/Sproducts.scss
+++ b/client/src/pagesS/Sproducts/Sproducts.scss
@@ -1,7 +1,7 @@
-.single {
+.Sproducts {
     display: flex;
     width: 100%;
-    .singleContainer {
+    .SproductsContainer {
       flex: 6;
   
       .top {
