--- a/client/src/pagesS/home2/Home2.scss
+++ b/client/src/pagesS/home2/Home2.scss
@@ -1,16 +1,25 @@
 .home2 {
     display: flex;
     width: 100%;
+    text-align: center;
     .home2Container {
       flex: 6;
-      .top {
-        padding: 10px;
-        display: flex;
-        gap: 20px;
-        .title {
-            color: rgb(0, 131, 143);
-            margin-bottom: 20px;
+        .top {
+            padding: 10px;
+            margin: 20px;
+            display: flex;
         }
+        .midle{
+            color: rgb(0, 131, 143);
+            padding: 10px;
+            margin: 20px;
+            display: flex;
+        }
+        .last{
+            color: rgb(0, 0, 0);
+            padding: 10px;
+            margin: 20px;
+            display: flex;
         }
     }
 }
