--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -143,6 +143,7 @@ img {
   font-weight: 700;
   margin-bottom: 2rem;
   border: none;
+  border-radius: 5px;
 }
 @media (min-width: 768px) {
   .boton {
@@ -152,7 +153,7 @@ img {
 .boton:hover {
   cursor: pointer;
 }
-.boton {
+.boton--primario {
   background-color: cadetblue;
 }
 
