--- a/client/src/pages/services/services.css
+++ b/client/src/pages/services/services.css
@@ -42,32 +42,30 @@ h4 {
   font-size: 2.8rem;
 }
 .producto img {
-  max-width: 15%;
+  max-width: 25%;
+  max-height: 10%;
 }
 
 .resultados{
   background-color: cadetblue;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 
 
 .principal{
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  margin-top: 30px;
-  margin-right: 30px;
+  grid-template-columns: 1fr 2fr;
 }
-
-.filtros{
-margin-left: 20px;
-}
-
 
 .precio, .ubicacion{
   display:grid;
   grid-template-rows: 1fr;
+}
+
+.Ordenar{
+margin-left: 45rem;
 }
 
 .precio a, .ubicacion a{
@@ -86,5 +84,6 @@ margin-left: 20px;
 }
 
 .producto{
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
